hivefivechart/templates/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: phxtho/hivefive-api
        ports:
          - containerPort: 3000
