hivefivechart/templates/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    run: api-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: api
