hivefivechart/templates/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-svc
  labels:
    run: front-end-svc
spec:
  type: NodePort
  ports:
  - port: 4444
  selector:
    app: front-end
